// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TripView /> should render component with current trip of 1 day and correct description 1`] = `
<div
  className="trip-view-container limited-width-shadow"
>
  <div
    className="trip-view-header"
  >
    <h2>
      title
    </h2>
    <h5>
      country
    </h5>
    <div
      className="reviewer"
    >
      <span>
        Author:
      </span>
       name lastname
    </div>
  </div>
  <div
    className="trip-view-description"
  >
    <Editor
      editorClassName="editor-self"
      editorState={Object {}}
      readOnly={true}
      toolbarClassName="editor-toolbar"
      toolbarHidden={true}
      wrapperClassName="editor-wrapper"
    />
  </div>
  <div
    className="trip-view-box"
  >
    <div
      className="left"
    >
      <div>
        <span>
          Duration:
        </span>
         1 day
      </div>
      <div>
        <span>
          Expenses:
        </span>
         $expences 
      </div>
    </div>
    <div
      className="right"
    >
      <span>
        Rating
      </span>
      <div>
        rating
        /5
      </div>
    </div>
  </div>
</div>
`;

exports[`<TripView /> should render component with current trip of 10 days and wrong 1`] = `
<div
  className="trip-view-container limited-width-shadow"
>
  <div
    className="trip-view-header"
  >
    <h2>
      title
    </h2>
    <h5>
      country
    </h5>
    <div
      className="reviewer"
    >
      <span>
        Author:
      </span>
       name lastname
    </div>
  </div>
  <div
    className="trip-view-description"
  >
    <Editor
      editorClassName="editor-self"
      editorState={Object {}}
      readOnly={true}
      toolbarClassName="editor-toolbar"
      toolbarHidden={true}
      wrapperClassName="editor-wrapper"
    />
  </div>
  <div
    className="trip-view-box"
  >
    <div
      className="left"
    >
      <div>
        <span>
          Duration:
        </span>
         10 days
      </div>
      <div>
        <span>
          Expenses:
        </span>
         $expences 
      </div>
    </div>
    <div
      className="right"
    >
      <span>
        Rating
      </span>
      <div>
        rating
        /5
      </div>
    </div>
  </div>
</div>
`;

exports[`<TripView /> should render component with empty trips 1`] = `null`;
